some i18n firebase configuration

--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -1,5 +1,5 @@
 {
-  "locale": "en-US",
+  "locale": "en",
   "translations": {
     "7142233927764456998": "Click to navigate.",
     "7280304101072084726": "{$START_LINK}One{$CLOSE_LINK}",
