--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -1,6 +1,8 @@
 {
   "locale": "en",
   "translations": {
+    "7633754075223722162": "French",
+    "5866254605255506989": "English",
     "7142233927764456998": "Click to navigate.",
     "7280304101072084726": "{$START_LINK}One{$CLOSE_LINK}",
     "6346202457270669767": "{$START_LINK}Two{$CLOSE_LINK}",
